# rcPDF

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENCE.md  README.md
.github/workflows/: general.yml
icon/: rcPDF.ai
src/: README.md  lib.rs  page.rs  paper.rs  renderer.rs  text.rs
src/filters/: ascii85decode.rs  asciihexdecode.rs  mod.rs
src/objects/: README.md  array_object.rs  boolean_object.rs  dictionary_object.rs  direct_object.rs  indirect_object.rs  mod.rs  name_object.rs  null_object.rs  numeric_object.rs  object.rs  stream_object.rs  string_object.rs
src/objects/direct_objects/: array_object.rs  boolean_object.rs  dictionary_object.rs  hexadecimal_string_object.rs  integer_number_object.rs  literal_string_object.rs  mod.rs  name_object.rs  numeric_object.rs  real_number_object.rs  string_object.rs
src/objects/indirect_objects/: indirect_object.rs  mod.rs  stream_object.rs
src/util/: margins.rs  mm.rs  mod.rs  position.rs  rectangle.rs  rotation.rs  size.rs  xref_table_entry.rs
