[package]
name = "rc_pdf"
version = "0.2.0"
authors = ["Alexander Rolley"]
edition = "2021"
description = "Create PDFs in rust."
readme = "README.md"
repository = "https://gitlab.com/Jockerkat/rcpdf"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
